.kubernetes/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: api
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: api
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.service: api
    spec:
      containers:
        - args:
            - python
            - -m
            - gunicorn
            - -b
            - 0.0.0.0:3002
            - civviebot_api:civviebot_api
          image: civviebot
          name: api
          ports:
            - containerPort: 3002
              name: http
          resources:
            limits:
              cpu: 500m
              memory: 128Mi
        - name: nginx
          image: docker.io/nginx:mainline
          ports:
            - name: external-http
              containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d
          resources:
            limits:
              cpu: 500m
              memory: 128Mi
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config
      restartPolicy: Always
status: {}
