.kubernetes/bot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: bot
  name: bot
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: bot
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.service: bot
    spec:
      containers:
        - args:
            - python
            - civviebot.py
          image: civviebot
          name: bot
          resources:
            limits:
              cpu: 1
              memory: 128Mi
      restartPolicy: Always
status: {}
