.kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: civviebot
  name: civviebot
spec:
  selector:
    matchLabels:
      io.kompose.service: civviebot
  template:
    metadata:
      labels:
        io.kompose.service: civviebot
    spec:
      containers:
        - name: api
          args:
            - python
            - -m
            - gunicorn
            - -b
            - 0.0.0.0:3002
            - civviebot_api:civviebot_api
          image: civviebot
          resources:
            limits:
              cpu: 500m
              memory: 128Mi
        - name: nginx
          image: docker.io/nginx:mainline
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d
          resources:
            limits:
              cpu: 500m
              memory: 128Mi
        - name: bot
          args:
            - python
            - civviebot.py
          image: civviebot
          resources:
            limits:
              cpu: 500m
              memory: 128Mi
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config
