.kubernetes/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  ports:
    - name: external-http
      port: 80
      targetPort: http
  selector:
    io.kompose.service: api
status:
  loadBalancer: {}
