.kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: civviebot-service
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  ports:
    - name: http
      port: 80
      targetPort: 3002
      protocol: TCP
  selector:
    app: api
