.kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: civviebot-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "www.cbwh.link"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: civviebot-service
            port:
              number: 80
